--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/Tales-Andrade/game-app#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.1",
     "core-js": "^3.14.0",
+    "cors": "^2.8.5",
     "css-loader": "^5.2.6",
     "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
@@ -31,9 +33,12 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-session": "^1.17.2",
+    "express-validator": "^6.12.0",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.13",
+    "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
