--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Tales-Andrade/game-app#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.1",
@@ -40,8 +41,9 @@
     "mongoose": "^5.12.13",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0",
     "regenerator-runtime": "^0.13.7",
     "sanitize-html": "^2.4.0",
     "style-loader": "^2.0.0"
