--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "game-app",
+  "name": "game-centre",
   "version": "1.0.0",
-  "description": "This project is a game store that the clients can put comments about the games and give it a grade. The main object of this project is to improve my skills in the technologies used.",
-  "main": "index.js",
+  "description": "This project is a game application that the clients can put comments about the games and give it a grade. The main object of this project is to improve my skills in the technologies used.",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js --ignore public --ignore frontend",
@@ -10,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Tales-Andrade/game-app.git"
+    "url": "git+https://github.com/Tales-Andrade/game-centre.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Tales-Andrade/game-app/issues"
+    "url": "https://github.com/Tales-Andrade/game-centre/issues"
   },
-  "homepage": "https://github.com/Tales-Andrade/game-app#readme",
+  "homepage": "https://github.com/Tales-Andrade/game-centre#readme",
   "dependencies": {
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
